deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: korext-oss-registry
spec:
  replicas: 3
  selector:
    matchLabels:
      app: korext-oss-registry
  template:
    metadata:
      labels:
        app: korext-oss-registry
    spec:
      containers:
      - name: registry
        image: korext/oss-registry:1.0
        ports:
        - containerPort: 3000
