deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: korext-oss-registry
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: korext-oss-registry
